SynProdGITV1/force-app/main/default/objects/Quote/fields/IncoTerms_Lead_Time_Ship_To_Match__c.field-meta.xml
<CustomField>
    <fullName>IncoTerms_Lead_Time_Ship_To_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether all Quote Order Items have identical values for IncoTerms, Lead Time, and Ship-To. Returns TRUE if all values match across items; otherwise, returns FALSE.</description>
    <label>IncoTerms, Lead Time &amp; Ship-To Match</label>
    <type>Checkbox</type>
</CustomField>