SynProdGITV1/force-app/main/default/objects/Quote/fields/Language_of_Output__c.field-meta.xml
<CustomField>
    <fullName>Language_of_Output__c</fullName>
    <description>Specifies the language in which output documents</description>
    <inlineHelpText>Quote output PDF will be printed in this language</inlineHelpText>
    <label>Language of Output</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>EN</label>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>