SynProdGITV1/force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is important for managing cash flow and ensuring timely payments</description>
    <label>Payment Terms</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>