SynProdGITV1/force-app/main/default/objects/Quote/fields/Quote_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Quote External ID used only for data migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Quote External ID used only for data migration.</inlineHelpText>
    <label>Quote External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>