SynProdGITV1/force-app/main/default/objects/Quote/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>Stores the reason why the record was rejected. Useful for tracking rejection patterns and improving future conversion strategies</description>
    <inlineHelpText>If quote is rejected, fill a value</inlineHelpText>
    <label>Reason for Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Price</fullName>
            </value>
            <value>
                <fullName>Sales - Payment Term</fullName>
            </value>
            <value>
                <fullName>Sales - To Distribution</fullName>
            </value>
            <value>
                <fullName>Product - Performance</fullName>
            </value>
            <value>
                <fullName>Product - SYN Product Mgt.</fullName>
            </value>
            <value>
                <fullName>Product - Development time</fullName>
            </value>
            <value>
                <fullName>Service - SYN Regulatory</fullName>
            </value>
            <value>
                <fullName>Service - SYN Logistics</fullName>
            </value>
            <value>
                <fullName>Service - SYN Supply Chain</fullName>
            </value>
            <value>
                <fullName>Service - Priority Tech.</fullName>
            </value>
            <value>
                <fullName>Service - Priority Sales</fullName>
            </value>
            <value>
                <fullName>Customer - Supplier Structure</fullName>
            </value>
            <value>
                <fullName>Customer - End Product Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer - Demand Lost</fullName>
            </value>
            <value>
                <fullName>Customer - Gvt. Regulations</fullName>
            </value>
            <value>
                <fullName>Customer - Geopolitics</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
                <isActive>false</isActive>
                <label>Lost to Competitor</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <isActive>false</isActive>
                <label>No Budget / Lost Funding</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>No Decision / Non-Responsive</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>