SynProdGITV1/force-app/main/default/objects/Quote/fields/RHQ_Account__c.field-meta.xml
<CustomField>
    <fullName>RHQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates whether this account is a Regional Headquarters (RHQ). Used for reporting, account hierarchy, and territory management</description>
    <label>RHQ Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>RHQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (RHQ Account)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>