SynProdGITV1/force-app/main/default/objects/Quote/fields/Sales_Org_Data__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a related Sales Org Data record to represent a parent or associated organization within the hierarch</description>
    <label>Sales Org Data</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>