SynProdGITV1/force-app/main/default/objects/Quote/fields/Sales_Quote_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quote_Template_Id__c</fullName>
    <formula>IF( ISPICKVAL( Language_of_Output__c , &apos;EN&apos;) , &apos;0T_0052AC900887&apos;, 
 IF( ISPICKVAL( Language_of_Output__c , &apos;DE&apos;) , &apos;0T_0062AC782861&apos;, 
 IF( ISPICKVAL( Language_of_Output__c , &apos;FR&apos;) , &apos;0T_0072AC230251&apos;, 
 IF( ISPICKVAL( Language_of_Output__c , &apos;IT&apos;) , &apos;0T_0082AC421978&apos;, 
 IF( ISPICKVAL( Language_of_Output__c , &apos;NL&apos;) , &apos;0T_0092AC458094&apos;, 
 IF( ISPICKVAL( Language_of_Output__c , &apos;ES&apos;) , &apos;0T_0102AC590995&apos;, &apos;0T_0052AC900887&apos;))))))</formula>
    <label>Sales Quote Template Id</label>
    <type>Text</type>
</CustomField>