SynProdGITV1/force-app/main/default/objects/Quote/fields/Validity_From__c.field-meta.xml
<CustomField>
    <fullName>Validity_From__c</fullName>
    <description>The &quot;Quote Validity From&quot; date should be manually entered in the Quote, as it cannot default to the Quote Creation Date due to monthly pricing.</description>
    <inlineHelpText>Enter the start date for quote validity. It should not default to the quote creation date due to monthly pricing</inlineHelpText>
    <label>Validity From</label>
    <type>Date</type>
</CustomField>