SynProdGITV1/force-app/main/default/objects/Quote/validationRules/Account_Related_To_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Related_To_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(OpportunityId)), NOT(ISBLANK(Account__r.Id )),
    Account__r.Id &lt;&gt; Opportunity.AccountId
)</errorConditionFormula>
    <errorMessage>Opportunity must be related to an Account. Please select a valid Opportunity.</errorMessage>
</ValidationRule>