SynProdGITV1/force-app/main/default/objects/Quote/validationRules/Bill_To_Address_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_To_Address_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( BillingCountry ) , 
ISBLANK( BillingCity ), ISBLANK( BillingStreet ),ISBLANK(  BillingPostalCode ))</errorConditionFormula>
    <errorMessage>Please enter complete Billing Address</errorMessage>
</ValidationRule>