SynProdGITV1/force-app/main/default/objects/Quote/validationRules/Prevent_Edit_On_Accepted_Rejected_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_On_Accepted_Rejected_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status, &quot;Accepted&quot;),
        ISPICKVAL(Status, &quot;Rejected&quot;)
    ),
    NOT(ISNEW()),  
    NOT(ISCHANGED(Status))
)</errorConditionFormula>
    <errorMessage>You cannot edit the Quote when the Status is Accepted or Rejected.</errorMessage>
</ValidationRule>