SynProdGITV1/force-app/main/default/objects/Quote/validationRules/Quote_Requires_Opportunity_Or_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Requires_Opportunity_Or_Account</fullName>
    <active>true</active>
    <description>Either Account or Opportunity must be populated</description>
    <errorConditionFormula>AND(ISBLANK(Account__c), ISBLANK(OpportunityId))</errorConditionFormula>
    <errorMessage>Please fill in either the Opportunity or the Account.</errorMessage>
</ValidationRule>