SynProdGITV1/force-app/main/default/objects/Quote/validationRules/Rejected_Status_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Status_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status,&quot;Rejected&quot;) &amp;&amp; ISPICKVAL(Reason_for_Rejection__c,&apos;&apos; )</errorConditionFormula>
    <errorMessage>Rejected status should have the reason for rejection.</errorMessage>
</ValidationRule>